test/errors/assert/assert_in_fn.yasl

fn f(x) {
    assert x
}

f(true)
f(false)
